# rl-llm-toolchain-optimisation

./: .env.example  .gitignore  LICENSE  README.md  draft_plot_queries.json  min_consumption.txt  pyproject.toml  test_output.txt
data/: ground_truth_sample.json  training_queries.json
review/: ruff_errors.txt
scripts/: generate_ground_truth.py  generate_training_queries.py  ground_truth_output.txt  train_rl_agent.py
src/: __init__.py  config.py
src/agents/: __init__.py  base_agent.py  tool_registry.py
src/data/: __init__.py  generator.py
src/prompts/: baseline.txt  llama_react.txt
src/rl/: model_wrapper.py  ppo_trainer.py  reward_function.py
src/tools/: __init__.py  library.py
src/utils/: __init__.py  logger.py  parsing.py  tensor_utils.py
tests/: test_load_factor.py  test_reward_function.py  test_sql_safety.py  test_tool_registry.py
